# DBSage

./: .env.sample  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: f6dcfe38245a_initial_generation.py
db_sage/: main.py
db_sage/app/core/base/: email.py  responses.py
db_sage/app/core/config/: db.py  email.py  embedder.py  instruments.py  llm.py  security.py
db_sage/app/core/dependencies/: user.py
db_sage/app/db/: database.py
db_sage/app/utils/: file.py  settings.py  success_response.py  types.py
db_sage/app/v1/models/: __init__.py  base_model.py
db_sage/app/v1/responses/: prompt.py  user.py
db_sage/app/v1/routes/: __init__.py  auth.py  database.py  google_auth.py  prompt.py  user.py
db_sage/app/v1/schemas/: database.py  prompt.py
db_sage/app/v1/services/: email.py  google_oauth.py  prompt.py  user.py
tests/: conftest.py
tests/v1/auth/: test_forgot_password.py  test_google_oauth.py  test_refresh_token.py  test_reset_password.py  test_user_verification.py
tests/v1/user/: test_delete_user.py  test_fetch_all_users.py  test_get_me.py  test_get_user_by_id.py  test_update_current_user.py  test_update_user_by_id.py
