[tool.poetry]
name = "db-sage"
version = "0.1.0"
description = ""
authors = ["okunola <abdayoade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
fastapi = "^0.114.0"
bcrypt = "^4.2.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.9.0"
pytest = "^8.3.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.0"
python-decouple = "^3.8"
fastapi-mail = "^1.4.1"
passlib = "^1.7.4"
authlib = "^1.3.2"
uuid7 = "^0.1.0"
itsdangerous = "^2.2.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# start = "db_sage.app.main:main"
start = "db_sage.main:main"
